--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -4,6 +4,8 @@
   = form_for @user do |f|
     = hidden_field_tag "form", "form"
     = f.hidden_field :tmp_form, value: "form"
+    = hidden_field_tag :js_enabled
+    
     .checkboxes
       %h3= tf("RICHIESTA INFORMAZIONI", "INFORMATION REQUEST")
       = f.check_box :int_annuali_visual
