adding forgot password

--- a/app/views/user_mailer/reset_password.haml
+++ b/app/views/user_mailer/reset_password.haml
@@ -1,6 +1,8 @@
-- link = "http://#{root_url}/"
+- url = reset_password_url(@user.reset_password_token)
+- link = link_to url, url
 
-- if user.en?
-%p Follow this link to reset your password
-- else
-%p Clicca qui per effettuare il ripristino della password
+%p
+  - if @user.en?
+    Follow this link to reset your password: #{link}
+  - else
+    Clicca qui per effettuare il ripristino della password: #{link}
