finished reset password

--- a/app/views/user_mailer/reset_password.haml
+++ b/app/views/user_mailer/reset_password.haml
@@ -1,4 +1,4 @@
-- url = reset_password_url(@user.reset_password_token)
+- url = "#{root_url}users/reset_password/#{@user.reset_password_token}"
 - link = link_to url, url
 
 %p
