--- a/app/views/users/reset_password_form.haml
+++ b/app/views/users/reset_password_form.haml
@@ -1,6 +1,6 @@
-%h2 Reset Password
+%h2= tf "Ripristina la password", "Reset password"
 
 = form_tag [:reset_password_send], method: :post do
-  Insert your email address:
+  = tf "Inserisci il tuo indirizzo email:", "Insert your email address:"
   = text_field nil, :email
   = submit_tag "Reset password", class: "submit"
