--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -1057,8 +1057,21 @@ img.image_left
         background: #c00
         color: #FFF
 
+.share_btns
+  clear: left
+  padding: 25px 0 0
+  
 .fb_like
   clear: left
-  padding: 20px 0 0
+  margin: 0 0 5px 0
   iframe
     background: #E9E9E9
+
+.twitter
+  width: 110px
+  margin: 0 0 5px 0
+  
+.twitter, .linkedin  
+  display: inline-block
+  
+  
