--- a/app/views/elements/_share.haml
+++ b/app/views/elements/_share.haml
@@ -1,6 +1,16 @@
-%script{ src: "http://connect.facebook.net/en_US/all.js#xfbml=1" }
-.fb_like
-  :plain
-    <fb:like href="#{request_url}" send="true" width="400" show_faces="true"></fb:like>
-%script{ src: "//platform.linkedin.com/in.js", type: "text/javascript" }    
-%script{ type: "IN/Share", :"data-url" => request_url, :"data-counter" => "right" }
+.share_btns
+
+  %script{ src: "http://connect.facebook.net/en_US/all.js#xfbml=1" }
+  .fb_like
+    :plain
+      <fb:like href="#{request_url}" send="true" width="400" show_faces="true"></fb:like>
+
+  .twitter
+    %a{ href: "https://twitter.com/share", class: "twitter-share-button", :"data-via" => "acc_cappiello", :"data-lang" => "msa", :"data-dnt" => "true" } Tweet
+    %script 
+      :plain
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");  
+
+  .linkedin
+    %script{ src: "//platform.linkedin.com/in.js", type: "text/javascript" }    
+    %script{ type: "IN/Share", :"data-url" => request_url, :"data-counter" => "right" }
