--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -403,6 +403,16 @@ a#profile_name
     
   a:hover .date
     
+
+#news 
+  span
+    display: inline-block
+  span.title
+    width: 70%
+  span.date
+    width: 30%
+  p 
+    clear: both
   
 .articles.show .date
   margin-top: 5px
@@ -412,6 +422,14 @@ a#profile_name
 .articles.index .date
   float: left
   margin-right: 15px
+  
+#articles_list li 
+  a
+    font-weight: bold
+    font-size: 1.1em
+  p:last-child
+    margin: 0 0 30px 0
+  
   
 #logo
   float: left
