--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -1089,7 +1089,7 @@ img.image_left
   width: 110px
   margin: 0 0 5px 0
   
-.twitter, .linkedin  
+.twitter, .linkedin, .fb_like
   display: inline-block
   
   
