--- a/app/views/elements/_share.haml
+++ b/app/views/elements/_share.haml
@@ -3,7 +3,7 @@
   %script{ src: "http://connect.facebook.net/en_US/all.js#xfbml=1" }
   .fb_like
     :plain
-      <fb:like href="#{request_url}" send="true" width="400" show_faces="true"></fb:like>
+      <fb:like href="#{request_url}" send="false" width="400" show_faces="false"></fb:like>
 
   .twitter
     %a{ href: "https://twitter.com/share", class: "twitter-share-button", :"data-via" => "acc_cappiello", :"data-lang" => "msa", :"data-dnt" => "true" } Tweet
