registrati va a registrazione con preferenze

--- a/app/views/sections/_login.html.haml
+++ b/app/views/sections/_login.html.haml
@@ -33,6 +33,6 @@
     |
     = link_to "Login", "/login"
     |
-    = link_to "Registrati", "/users/new"
+    = link_to "Registrati", "/pages/info"
     
     
