small translation fixes

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -14,4 +14,4 @@
 
 
   .right
-    = link_to tf("Torna alla home page", "Back to home page"), root_path
+    = link_to tf("Torna alla pagina News", "Back to News page"), [:news]
