--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,11 +1,11 @@
-= error_messages_for @user
+- error_messages_for(@user)
 
 .forms_form
   = form_for @user do |f|
     = hidden_field_tag "form", "form"
     = f.hidden_field :tmp_form, value: "form"
     = hidden_field_tag :js_enabled
-    
+
     .checkboxes
       %h3= tf("RICHIESTA INFORMAZIONI", "INFORMATION REQUEST")
       = f.check_box :int_annuali_visual
@@ -18,7 +18,7 @@
       = f.label     :int_brevi_interior,  "#{tf "corsi brevi", "short courses"} - INTERIOR DESIGN"
       = f.check_box :int_brevi_graphic
       = f.label     :int_brevi_graphic,  "#{tf "corsi brevi", "short courses"} - GRAFICA EDITORIALE"
-    
+
       %h3= tf("RICHIESTA DI PARTECIPAZIONE GRATUITA", "REQUEST FREE PARTICIPATION")
       = f.check_box :int_stage_visual
       = f.label     :int_stage_visual,    "#{tf "open day", "open day"} - VISUAL DESIGN"
@@ -35,34 +35,34 @@
       - unless logged_in?
         = f.label :password, tf("Scegli una password", "Choose a password")
         = f.password_field :password
-      = f.label :address, tf("Indirizzo", "Address")  
-      = f.text_field :address   
-      = f.label :city, tf("Città", "City")  
-      = f.text_field :city          
-      = f.label :cap, tf("CAP", "ZIP")  
-      = f.text_field :cap           
-      = f.label :tel, tf("Telefono", "Phone")  
-      = f.text_field :tel           
-      = f.label :qualification, tf("Titolo di studio", "Degree")  
+      = f.label :address, tf("Indirizzo", "Address")
+      = f.text_field :address
+      = f.label :city, tf("Città", "City")
+      = f.text_field :city
+      = f.label :cap, tf("CAP", "ZIP")
+      = f.text_field :cap
+      = f.label :tel, tf("Telefono", "Phone")
+      = f.text_field :tel
+      = f.label :qualification, tf("Titolo di studio", "Degree")
       = f.text_field :qualification
-      
+
       = f.label :birthplace, tf("Luogo di nascita", "Born")
-      = f.text_field :birthplace 
+      = f.text_field :birthplace
       = f.label :birthdate, tf("Data di nascita", "Birthdate")
       .date_select
         = f.date_select :birthdate, start_year: 1960, end_year: 2000
-    
+
       = f.label :notes, tf("Messaggio", "Other infos")
       = f.text_area :notes
-    
+
       .checkboxes_bottom
         = f.check_box :newsletter
         = f.label     :newsletter,  tf("Newsletter - tieniti informato su nuovi corsi ed iniziative", "Newsletter - stay informed about new courses and events")
-    
+
         = check_box_tag :authorize
         = label_tag     :authorize,  tf("autorizzo il trattamento dei dati personali", "I authorize the use of my personal data")
       .clear
-    
-    
-      = f.submit "Invia", class: "submit"
- 
+
+
+      = f.submit tf("Invia", "Send"), class: "submit"
+
