--- a/app/views/pages/offer.html.haml
+++ b/app/views/pages/offer.html.haml
@@ -1,7 +1,7 @@
 - image_tag = lambda { |path| haml_tag :img, { src: "/images/offer/#{path}.png" } }
 
 
-- title "Offerta formativa"
+- title tf("Offerta formativa", "Training")
 
 .visual
   %h1 Visual Design
