--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -32,7 +32,7 @@
                   %li= link_to "Interior Design", page_path(id: tf("estivo_interior_design", "summer_interior_design"))
                   %li= link_to tf("Orientamento Artistico", "Art"), page_path(id: tf("estivo_orientamento_artistico", "summer_art"))
                 = link_to tf("Corsi Estivi", "Summer Courses"), js_void
-            = link_to tf("Corsi Introduttivi", "Introductory Courses"), js_void
+            = link_to tf("Corsi brevi", "Short Courses"), js_void
         - else
           %li
             = link_to tr(page).title, pag_path(page)
