--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -976,11 +976,14 @@ img.image_left {
 .fb_like {
   clear: left;
   margin: 0 0 5px 0; }
+  
   .fb_like iframe {
     background: #e9e9e9; }
 
 .twitter {
-  width: 110px;
+  width:auto;
+  display:inline;
+  max-width: 80px;
   margin: 0 0 5px 0; }
 
 .twitter, .linkedin, .fb_like {
